force-app/main/default/objects/AV_PicklistListValuesByRecordType__mdt/AV_PicklistListValuesByRecordType__mdt.object-meta.xml
<CustomObject>
    <description>permite definir y gestionar los valores de lista de selección específicos para diferentes tipos de registros</description>
    <label>Picklist List Value By Record Type</label>
    <pluralLabel>Picklist List Values By Record Type</pluralLabel>
</CustomObject>