force-app/main/default/objects/AV_PicklistListValuesByRecordType__mdt/fields/AV_ListSalesProcess__c.field-meta.xml
<CustomField>
    <fullName>AV_ListSalesProcess__c</fullName>
    <label>List Sales Process</label>
    <type>TextArea</type>
</CustomField>