force-app/main/default/objects/AV_PicklistListValuesByRecordType__mdt/fields/AV_ObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>AV_ObjectLabel__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>