force-app/main/default/objects/AV_PicklistListValuesByRecordType__mdt/fields/AV_RecordTypeLabel__c.field-meta.xml
<CustomField>
    <fullName>AV_RecordTypeLabel__c</fullName>
    <label>Record Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>